force-app/main/default/objects/PDLM__Item_Revision__c/PDLM__Item_Revision__c.object-meta.xml
<CustomObject>
    <description>Define Revisions of an Item</description>
    <label>Item Revision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>