force-app/main/default/objects/PDLM__Item_Revision__c/fields/Associated_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Product_ID__c</fullName>
    <description>ID in Github</description>
    <inlineHelpText>ID in Github</inlineHelpText>
    <label>Associated Product ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>