force-app/main/default/objects/PDLM__Item_Revision__c/fields/Battery_Chemistry_Type__c.field-meta.xml
<CustomField>
    <fullName>Battery_Chemistry_Type__c</fullName>
    <inlineHelpText>What is the battery chemistry</inlineHelpText>
    <label>Battery Chemistry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Li-Metal</fullName>
            </value>
            <value>
                <fullName>Li-Ion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>