force-app/main/default/objects/PDLM__Item_Revision__c/fields/Battery_Type__c.field-meta.xml
<CustomField>
    <fullName>Battery_Type__c</fullName>
    <label>Battery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lithium Ion</fullName>
            </value>
            <value>
                <fullName>Lithium Metal</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>