force-app/main/default/objects/PDLM__Item_Revision__c/fields/Biogradable_Type__c.field-meta.xml
<CustomField>
    <fullName>Biogradable_Type__c</fullName>
    <label>Biogradable Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>BIB - Biobased</fullName>
            </value>
            <value>
                <fullName>COP - Compostable</fullName>
            </value>
            <value>
                <fullName>BID - Biodegradable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>