force-app/main/default/objects/PDLM__Item_Revision__c/fields/Build_In__c.field-meta.xml
<CustomField>
    <fullName>Build_In__c</fullName>
    <label>Build In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>