force-app/main/default/objects/PDLM__Item_Revision__c/fields/Canada_End_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Canada_End_of_Sale__c</fullName>
    <label>Canada End of Sale</label>
    <type>Date</type>
</CustomField>