force-app/main/default/objects/PDLM__Item_Revision__c/fields/Compatible_HW_Version__c.field-meta.xml
<CustomField>
    <fullName>Compatible_HW_Version__c</fullName>
    <description>Compatible HW Version Firmware</description>
    <label>Compatible HW Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>