force-app/main/default/objects/PDLM__Item_Revision__c/fields/Cost_including_MVA__c.field-meta.xml
<CustomField>
    <fullName>Cost_including_MVA__c</fullName>
    <label>Cost including MVA</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>