force-app/main/default/objects/PDLM__Item_Revision__c/fields/Footprint__c.field-meta.xml
<CustomField>
    <fullName>Footprint__c</fullName>
    <label>Footprint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>