force-app/main/default/objects/PDLM__Item_Revision__c/fields/Hazardous_Material_Involved__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Material_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Material Involved</label>
    <type>Checkbox</type>
</CustomField>