force-app/main/default/objects/PDLM__Item_Revision__c/fields/IEC_Code__c.field-meta.xml
<CustomField>
    <fullName>IEC_Code__c</fullName>
    <label>IEC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>