force-app/main/default/objects/PDLM__Item_Revision__c/fields/Is_NOM_Certification_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_NOM_Certification_Required__c</fullName>
    <description>Is NOM Certification Required? - for SKUs</description>
    <label>Is NOM Certification Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>