force-app/main/default/objects/PDLM__Item_Revision__c/fields/Lithium_Battery_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Lithium_Battery_Configuration__c</fullName>
    <inlineHelpText>How is the battery configured?</inlineHelpText>
    <label>Lithium Battery Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Packed with the product</fullName>
            </value>
            <value>
                <fullName>Contained in product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>