force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Approved_Duration__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Approved_Duration__c</fullName>
    <formula>IF(ISNULL(PDLM__End_Date_Time__c) = true, NOW() - PDLM__Released_Date_Time__c, PDLM__End_Date_Time__c - PDLM__Released_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How long was this revision the Latest Released Revision, rounded down in Days</inlineHelpText>
    <label>Approved Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>