force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>