force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Dual_Training_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Dual_Training_Approvals_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, two approvals required from the trainee AND a trainer, supervisor, or plan owner. Surrogate Sign-Off feature will not apply to dual approval assignments.</inlineHelpText>
    <label>Dual Training Approvals Required</label>
    <type>Checkbox</type>
</CustomField>