force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Owner__c</fullName>
    <formula>PDLM__Master_Item__r.OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Current User</label>
    <type>Checkbox</type>
</CustomField>