force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Rebaseline_Draft__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Rebaseline_Draft__c</fullName>
    <description>Record the most recent revision which caused a baseline to be performed in the case of multiple draft revisions</description>
    <label>Rebaseline Draft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>