force-app/main/default/objects/PDLM__Item_Revision__c/fields/PDLM__Training_Quiz__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Training_Quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Quiz</label>
    <referenceTo>PDLM__Training_Quiz__c</referenceTo>
    <relationshipLabel>Item Revisions</relationshipLabel>
    <relationshipName>Item_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>