force-app/main/default/objects/PDLM__Item_Revision__c/fields/Product_Height_in_cm__c.field-meta.xml
<CustomField>
    <fullName>Product_Height_in_cm__c</fullName>
    <label>Product Height (in cm)</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>