force-app/main/default/objects/PDLM__Item_Revision__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Samsara Beyond</fullName>
            </value>
            <value>
                <fullName>Deal Component</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
                <isActive>false</isActive>
                <label>Bundle</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Promotional Product</fullName>
                <isActive>false</isActive>
                <label>Promotional Product</label>
            </value>
            <value>
                <fullName>Serialized Hardware</fullName>
                <isActive>false</isActive>
                <label>Serialized Hardware</label>
            </value>
            <value>
                <fullName>Service Fee</fullName>
                <isActive>false</isActive>
                <label>Service Fee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>