force-app/main/default/objects/PDLM__Item_Revision__c/fields/Rechargeable__c.field-meta.xml
<CustomField>
    <fullName>Rechargeable__c</fullName>
    <label>Rechargeable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>