force-app/main/default/objects/PDLM__Item_Revision__c/fields/Return_Needed__c.field-meta.xml
<CustomField>
    <fullName>Return_Needed__c</fullName>
    <label>Return Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>