force-app/main/default/objects/PDLM__Item_Revision__c/fields/Revenue_Recognition_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognition_Type__c</fullName>
    <description>Category used by finance for revenue</description>
    <inlineHelpText>Category used by finance for revenue</inlineHelpText>
    <label>Revenue Recognition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Term</fullName>
            </value>
            <value>
                <fullName>Samsara Standard Direct</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Upon Close</fullName>
            </value>
            <value>
                <fullName>Samsara 1 month install</fullName>
            </value>
            <value>
                <fullName>Samsara 6 month install</fullName>
            </value>
            <value>
                <fullName>Default One-Time Direct Posting</fullName>
                <isActive>false</isActive>
                <label>Default One-Time Direct Posting</label>
            </value>
            <value>
                <fullName>Default Standard</fullName>
                <isActive>false</isActive>
                <label>Default Standard</label>
            </value>
            <value>
                <fullName>Direct Samsara</fullName>
                <isActive>false</isActive>
                <label>Direct Samsara</label>
            </value>
            <value>
                <fullName>RMA Fulfillment</fullName>
                <isActive>false</isActive>
                <label>RMA Fulfillment</label>
            </value>
            <value>
                <fullName>Standard Ratable</fullName>
                <isActive>false</isActive>
                <label>Standard Ratable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>