force-app/main/default/objects/PDLM__Item_Revision__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Manager responsible for driving SKU forward</description>
    <inlineHelpText>Product Manager responsible for driving SKU forward</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Item_Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>