force-app/main/default/objects/PDLM__Item_Revision__c/fields/Watt_Hour_per_cell_battery_Li_Ion__c.field-meta.xml
<CustomField>
    <fullName>Watt_Hour_per_cell_battery_Li_Ion__c</fullName>
    <inlineHelpText>watt-hours (Wh) in Li-ion</inlineHelpText>
    <label>Watt Hour per cell/battery (Li Ion)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>