force-app/main/default/objects/PDLM__Item_Revision__c/validationRules/Description_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(PDLM__Description__c)</errorConditionFormula>
    <errorMessage>Please enter Item Description</errorMessage>
</ValidationRule>