force-app/main/default/objects/PDLM__Item_Revision__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Revision__c</columns>
    <columns>PDLM__Released__c</columns>
    <columns>PDLM__Released_Date__c</columns>
    <columns>PDLM__Released_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>