force-app/main/default/objects/PDLM__Item_Revision__c/listViews/PDLM__All_ppl.listView-meta.xml
<ListView>
    <fullName>PDLM__All_ppl</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Lifecycle_Phase__c</columns>
    <columns>PDLM__Description__c</columns>
    <columns>PDLM__Released__c</columns>
    <columns>PDLM__Released_Date__c</columns>
    <columns>PDLM__Revision__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>