force-app/main/default/objects/PDLM__Item_Revision__c/listViews/X030.listView-meta.xml
<ListView>
    <fullName>X030</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Revision__c</columns>
    <columns>PDLM__Released__c</columns>
    <columns>PDLM__Released_Date__c</columns>
    <columns>PDLM__Released_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>030</value>
    </filters>
    <label>030</label>
</ListView>